     - Android 4.1.x or later (API-16)
     - GCC 5.0 or Clang 3.4 (or equivalent)

Audio output:
 * ALSA: HDMI passthrough support.
   Use --alsa-passthrough to configure S/PDIF or HDMI passthrough.

Demuxer:
 * Support for HEIF format
 * Support for DASH WebM

Codecs:
 * Support for experimental AV1 video encoding
 * WebVTT encoder
 * Remove iomx support for Android
 * WebP image decoding

Video output:
 * Remove aa plugin
 * Remove evas plugin
 * Remove omxil_vout plugin

macOS:
 * Remove Growl notification support


Changes between 2.2.8 and 3.0.0:
--------------------------------

Platform support changes:
 * 3.0.x will be maintained as a LTS (best-effort basis, mostly for security)
   that will be the last working version for quite a few systems.

   Indeed the 3.0.x branch will contain the last releases running on:
     - Windows XP, Vista, and the servers equivalent of those Windows versions
     - macOS 10.7, 10.8 & 10.9, iOS 7 & 8
     - Android 2.x, 3.x, 4.0.x & 4.1.x
     - Compilers before gcc 5.0 and clang 3.4, or equivalent

 * For the 3.0 branch, please note:
   * The Windows XP/2003/2003R2 support for VLC is now on a best-effort basis:
     it should work, but not without limitations.
     libVLC support for Windows XP is deprecated.
     You _really_ should upgrade to a more modern Windows version!
   * Windows Vista (all versions) without Platform Upgrade is not supported.
   * 64bit version of VLC for Windows is recommended.
   * Linux support requires now a kernel newer than 2.6.26.
   * Mac OS X 10.6 support is now removed. You need OS X 10.7.

Core:
 * Support network browsing for distant filesystems (SMB, FTP, SFTP, NFS...)
   and rewrite the parsing of the media files and inputs
 * Support keystores: fetch and store passwords securely (sic!) for common
   protocols (HTTP, SMB, SFTP, FTP, RTSP ...)
 * Autodetect external audio tracks (ac3, m4a, aac, dts...) similar to subtitles