@@ -22,6 +22,7 @@ Codecs:
  * WebVTT encoder
  * Remove iomx support for Android
  * WebP image decoding
+ * Support for SMPTE-TT image profile
 
 Video output:
  * Remove aa plugin
